tests/Metalama.Framework.Tests.Integration/Tests/Aspects/InvalidCode/TemplateExpansionError.t.cs
// CompileTimeAspectPipeline.ExecuteAsync failed.
// Error LAMA0041 on `Method`: `'Exception of type 'System.Exception' thrown while executing the template method Aspect.OverrideMethod(): Exception of type 'System.Exception' was thrown. Exception details are in '(none)'. To attach a debugger to the compiler, use the  '-p:MetalamaDebugCompiler=True' command-line option.`